// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`button > renders with active variant ghost correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with active variant link correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with active variant outline correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with active variant soft correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with active variant solid correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with active variant subtle correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with activeClass correctly 1`] = `
"<button type="button" data-slot="base" class="font-bold">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with as correctly 1`] = `
"<div data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</div>"
`;

exports[`button > renders with avatar and leadingIcon correctly 1`] = `
"<button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with avatar and trailingIcon correctly 1`] = `
"<button type="button" data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
</button>"
`;

exports[`button > renders with avatar correctly 1`] = `
"<button type="button" data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with block correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with class correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-full font-bold">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with default slot correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if-->Default slot
  <!--v-if-->
</button>"
`;

exports[`button > renders with disabled and with link correctly 1`] = `
"<a aria-disabled="true" role="link" tabindex="-1" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</a>"
`;

exports[`button > renders with disabled correctly 1`] = `
"<button type="button" disabled="" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with icon correctly 1`] = `
"<button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with inactiveClass correctly 1`] = `
"<button type="button" data-slot="base" class="font-light">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with label correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with leading and icon correctly 1`] = `
"<button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with leading slot correctly 1`] = `
"<button type="button" data-slot="base" class="">Leading slot
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with leadingIcon correctly 1`] = `
"<button type="button" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with loading and avatar correctly 1`] = `
"<button type="button" disabled="" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with loading correctly 1`] = `
"<button type="button" disabled="" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with loading trailing and avatar correctly 1`] = `
"<button type="button" disabled="" data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
</button>"
`;

exports[`button > renders with loading trailing correctly 1`] = `
"<button type="button" disabled="" data-slot="base" class="">
  <!--v-if-->
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
</button>"
`;

exports[`button > renders with loadingIcon correctly 1`] = `
"<button type="button" disabled="" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`button > renders with neutral variant ghost correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with neutral variant link correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with neutral variant outline correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with neutral variant soft correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with neutral variant solid correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with neutral variant subtle correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with primary variant ghost correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with primary variant link correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with primary variant outline correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with primary variant soft correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with primary variant solid correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with primary variant subtle correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with size lg correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with size md correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with size sm correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with size xl correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with size xs correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with square correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`button > renders with trailing and icon correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if-->
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
</button>"
`;

exports[`button > renders with trailing slot correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if-->
  <!--v-if-->Trailing slot
</button>"
`;

exports[`button > renders with trailingIcon correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if-->
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg>
</button>"
`;

exports[`button > renders with ui correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="font-bold">Button</span>
  <!--v-if-->
</button>"
`;
